--- a/arch/arm/configs/cedric_defconfig
+++ b/arch/arm/configs/cedric_defconfig
@@ -1,33 +1,155 @@
 #
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.18.31 Kernel Configuration
+# <dohniks> the "DO NOT EDIT" warning? ignore it
+# <dohniks> at some point it was generated
+# <dohniks> now it's all your's
+# ..
+# <dohniks> but the ARM configs are often past the point of still being able of being generated
+# <dohniks> they are manual ... uhm ... pieces of art :)
 #
+# all 'overridden later as not set' means is that the config file was setting a value then unsetting it
+# so the original setting line has now been commented out
+
+
+# reivilibre :::
+
+CONFIG_LOCALVERSION="-reivilibre-003"
+
+# following mer-kernel-check:
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_LBDAF=y
+CONFIG_AUDIT=n
+CONFIG_INOTIFY_USER=y
+CONFIG_BLK_CGROUP=y
+CONFIG_PID_NS=y
+CONFIG_CHECKPOINT_RESTORE=y
+CONFIG_SYSFS=y
+CONFIG_FHANDLE=y
+CONFIG_WATCHDOG_NOWAYOUT=y
+CONFIG_TIMERFD=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_NETPRIO_CGROUP=y
+CONFIG_UTS_NS=y
+CONFIG_CGROUP_MEM_RES_CTLR_KMEM=y
+CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_PROC_FS=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_CGROUP_PERF=y
+CONFIG_RTC_DRV_CMOS=y
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_DEVTMPFS=y
+CONFIG_VT=y
+CONFIG_FANOTIFY=y
+CONFIG_NLS_UTF8=y
+CONFIG_SYSVIPC=y
+CONFIG_IPC_NS=y
+CONFIG_EPOLL=y
+CONFIG_SIGNALFD=y
+CONFIG_NET_NS=y
+CONFIG_TMPFS_XATTR=y
+CONFIG_RD_GZIP=y
+CONFIG_SCHED_DEBUG=y
+CONFIG_DEVTMPFS_MOUNT=y
+
+CONFIG_DUMMY=n
+
+CONFIG_UEVENT_HELPER_PATH=""
+
+
+# m is allowed according to MKC, in the following options
+CONFIG_NETFILTER_XT_CONNMARK=y
+CONFIG_NETFILTER_NETLINK_ACCT=y
+CONFIG_AUTOFS4_FS=y
+CONFIG_NETFILTER_XT_MATCH_NFACCT=y
+
+
+# following wiki directions:
+
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
+
+# for debugging:
+CONFIG_PSTORE_PMSG=y
+
+
+
+# to fix LXC:
+
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+#maybe this is Cgroup memory controller:
+CONFIG_MEMCG=y
+# Veth pair device:
+CONFIG_VETH=y
+# Macvlan:
+CONFIG_MACVLAN=y
+# Vlan:
+CONFIG_VLAN_8021Q=y
+
+CONFIG_NF_NAT_IPV6=y
+CONFIG_IP6_NF_TARGET_MASQUERADE=y
+CONFIG_NETFILTER_XT_TARGET_CHECKSUM=y
+CONFIG_UNIX_DIAG=y
+CONFIG_PACKET_DIAG=y
+CONFIG_NETLINK_DIAG=y
+
+
+# to fix ping issue:
+#doesn't work. CONFIG_SECURITY_ANDROID_GID_CAPABILITIES=y
+
+## copied from potter ::
+
+
+# Maybe this will fix "no space on device" problems?
+CONFIG_CFS_BANDWIDTH=y
+
+# Disable both of these because they cause permission denied errors
+CONFIG_ANDROID_PARANOID_NETWORK=n
+# This requires commits taken from halium bullhead, from Jul 10, 2017
+#CONFIG_SECURITY_ANDROID_GID_CAPABILITIES=n
+# (rei: not sure whether ^ SHOULD be =n; pme and bullhead have it as =y...)
+
+CONFIG_SECURITY_ANDROID_GID_CAPABILITIES=y
+
+## end of copied from potter ;;
+
+## disable kernel module signing
+
+### OLD
+# CONFIG_MODULE_SIG=y
+# CONFIG_MODULE_SIG_FORCE=y
+# CONFIG_MODULE_SIG_SHA512=y
+# sign kernel modules so they can be loaded (may disable strict mode later):
+# CONFIG_MODULE_SIG_ALL=y
+
+### NEW
+
+# CONFIG_MODULE_SIG is not set
+# CONFIG_MODULE_SIG_FORCE is not set
+# CONFIG_MODULE_SIG_SHA512 is not set
+# CONFIG_MODULE_SIG_ALL is not set
+
+
+# ::::::::::::::
+
+
 CONFIG_EARLY_IOREMAP=y
-CONFIG_LOCALVERSION="-lineageos"
-CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_TASKSTATS=y
-CONFIG_TASK_DELAY_ACCT=y
-CONFIG_TASK_XACCT=y
-CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_RCU_NOCB_CPU_ALL=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
-CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_SCHED_HMP=y
 CONFIG_NAMESPACES=y
-# CONFIG_UTS_NS is not set
-# CONFIG_PID_NS is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
@@ -42,9 +164,6 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
@@ -100,9 +219,6 @@ CONFIG_IP_PNP_DHCP=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
-# CONFIG_INET_XFRM_MODE_BEET is not set
-# CONFIG_INET_LRO is not set
-CONFIG_INET_DIAG_DESTROY=y
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -127,7 +243,6 @@ CONFIG_NF_CONNTRACK_IRC=y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
-CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
@@ -242,7 +357,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
-CONFIG_UID_SYS_STATS=y
+CONFIG_UID_CPUTIME=y
 CONFIG_MSM_ULTRASOUND=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -263,7 +378,7 @@ CONFIG_DM_UEVENT=y
 CONFIG_DM_VERITY=y
 CONFIG_DM_VERITY_FEC=y
 CONFIG_NETDEVICES=y
-CONFIG_DUMMY=y
+
 CONFIG_TUN=y
 CONFIG_RNDIS_IPA=y
 CONFIG_PPP=y
@@ -295,14 +410,14 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TABLET=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26=y
+# overridden later as 'not set' CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=y
+# overridden later as 'not set' CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v21=y
+# overridden later as 'not set' CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21=y
+# overridden later as 'not set' CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26=y
+# overridden later as 'not set' CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26=y
+# overridden later as 'not set' CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26=y
 CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26=y
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
+# rei: overridden later as 'not set'. CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_TOUCHSCREEN_FT5X06=y
 CONFIG_TOUCHSCREEN_MAXIM_STI=y
@@ -311,7 +426,6 @@ CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
-# CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
@@ -340,17 +454,17 @@ CONFIG_GPIO_QPNP_PIN=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_SMB1351_USB_CHARGER=y
 CONFIG_SMB135X_CHARGER=y
-CONFIG_QPNP_SMBCHARGER=y
+# overridden later as 'not set' CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_FG=y
 CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_LINEAR_CHARGER=y
-CONFIG_QPNP_TYPEC=y
+# overridden later as 'not set' CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
-CONFIG_APSS_CORE_EA=y
+# overridden later as 'not set' CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_EPM_ADC=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
@@ -368,14 +482,14 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_REGULATOR_FAN53555=y
-CONFIG_REGULATOR_MSM_GFX_LDO=y
+# overridden later as 'not set' CONFIG_REGULATOR_MSM_GFX_LDO=y
 CONFIG_REGULATOR_MEM_ACC=y
 CONFIG_REGULATOR_RPM_SMD=y
 CONFIG_REGULATOR_QPNP=y
 CONFIG_REGULATOR_QPNP_LABIBB=y
 CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_CPR=y
-CONFIG_REGULATOR_CPR4_APSS=y
+# overridden later as 'not set' CONFIG_REGULATOR_CPR4_APSS=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
@@ -398,7 +512,7 @@ CONFIG_MSM_CSI31_HEADER=y
 CONFIG_MSM_CSIPHY=y
 CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
-CONFIG_MSM_ISPIF=y
+# overriden later as 'not set' CONFIG_MSM_ISPIF=y
 CONFIG_IMX134=y
 CONFIG_IMX132=y
 CONFIG_OV9724=y
@@ -411,10 +525,10 @@ CONFIG_OV12830=y
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
-CONFIG_MSM_SDE_ROTATOR=y
+# overridden later as 'not set' CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_RADIO_IRIS=y
 CONFIG_RADIO_IRIS_TRANSPORT=y
-CONFIG_RADIO_SILABS=y
+# overridden later as 'not set' CONFIG_RADIO_SILABS=y
 CONFIG_MSM_KGSL=y
 CONFIG_FB=y
 CONFIG_FB_MSM=y
@@ -422,8 +536,8 @@ CONFIG_MSM_DBA=y
 CONFIG_MSM_DBA_ADV7533=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
-CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# overridden later as 'not set' CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
+# rei: is/was overridden later anyway CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_SOUND=y
 CONFIG_SND=y
@@ -461,7 +575,6 @@ CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_MSM_HSPHY=y
 CONFIG_USB_MSM_SSPHY_QMP=y
 CONFIG_MSM_QUSB_PHY=y
-CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_GADGET_DEBUG_FS=y
@@ -481,7 +594,6 @@ CONFIG_MMC_SDHCI_MSM_ICE=y
 CONFIG_MMC_CQ_HCI=y
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
-CONFIG_LEDS_QPNP_WLED=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_SWITCH=y
 CONFIG_EDAC=y
@@ -495,7 +607,6 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -547,7 +658,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_QMI_INTERFACE=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_EVENT_TIMER=y
-CONFIG_MSM_TZ_SMMU=y
+# overridden later as 'not set' CONFIG_MSM_TZ_SMMU=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
@@ -601,10 +712,8 @@ CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
-CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
-# CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 CONFIG_IPC_LOGGING=y
@@ -627,7 +736,6 @@ CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
 CONFIG_ARM_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM_NEON=y
-CONFIG_CRYPTO_SHA2_ARM_CE=y
 CONFIG_CRYPTO_SHA512_ARM_NEON=y
 CONFIG_CRYPTO_AES_ARM_BS=y
 CONFIG_CRYPTO_AES_ARM_CE=y
@@ -648,7 +756,6 @@ CONFIG_CRYPTO_AES_ARM_CE=y
 #
 
 CONFIG_MMI_DEVICE_DTBS=y
-CONFIG_MEMORY_STATE_TIME=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_SND_SOC_FSA8500=y
 #CONFIG_MOBICORE_DRIVER is not set
@@ -659,9 +766,6 @@ CONFIG_MTD_MSM_NAND=n
 CONFIG_MTD_CMDLINE_PARTS=y
 CONFIG_MTD_OF_PARTS=y
 CONFIG_MODULE_EXTRA_COPY=y
-# CONFIG_MODULE_SIG is not set
-# CONFIG_MODULE_SIG_FORCE is not set
-# CONFIG_MODULE_SIG_SHA512 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
@@ -673,23 +777,23 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_MMI=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26 is not set
 
-CONFIG_TOUCHSCREEN_MAXIM_STI=n
 
-CONFIG_GPIO_ARIZONA=y
-CONFIG_MFD_ARIZONA=y
-CONFIG_MFD_ARIZONA_SPI=y
-CONFIG_REGULATOR_ARIZONA=y
-CONFIG_SND_SOC_ARIZONA_M=y
-CONFIG_MFD_MARLEY=y
+
+# overridden later as 'not set' CONFIG_GPIO_ARIZONA=y
+# overridden later as 'not set' CONFIG_MFD_ARIZONA=y
+# overridden later as 'not set' CONFIG_MFD_ARIZONA_SPI=y
+# overridden later as 'not set' CONFIG_REGULATOR_ARIZONA=y
+# overridden later as 'not set' CONFIG_SND_SOC_ARIZONA_M=y
+# overridden later as 'not set' CONFIG_MFD_MARLEY=y
 CONFIG_SND_SOC_MARLEY=y
-CONFIG_SND_SOC_CS35L34=y
-CONFIG_SND_SOC_OPALUM=y
+# overridden later as 'not set' CONFIG_SND_SOC_CS35L34=y
+# overridden later as 'not set' CONFIG_SND_SOC_OPALUM=y
 CONFIG_MFD_CORE=y
 CONFIG_PN544=y
 CONFIG_MOT_UTAG=y
 CONFIG_SENSORS_LM75=y
-CONFIG_SENSORS_MOTOSH=y
-CONFIG_SENSORS_MOTOSH_HEADSET=y
+# overridden later as 'not set' CONFIG_SENSORS_MOTOSH=y
+# overridden later as 'not set' CONFIG_SENSORS_MOTOSH_HEADSET=y
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=n
 CONFIG_BOOTINFO=y
 CONFIG_HZ_300=y
@@ -713,9 +817,6 @@ CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_MODS_USB_EXT_BRIDGE=y
 # networking related
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
-CONFIG_IP_NF_MATCH_RPFILTER=y
-CONFIG_IP6_NF_MATCH_RPFILTER=y
-CONFIG_IP_MULTICAST=y
 CONFIG_IP_MROUTE=y
 CONFIG_IP_PIMSM_V2=y
 CONFIG_INET_LRO=y
@@ -728,8 +829,8 @@ CONFIG_NF_CONNTRACK_SIP=y
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
-CONFIG_MODS_CODEC_BUS=y
-CONFIG_SND_SOC_MODS_CODEC_SHIM=y
+# overridden later as 'not set' CONFIG_MODS_CODEC_BUS=y
+# overridden later as 'not set' CONFIG_SND_SOC_MODS_CODEC_SHIM=y
 CONFIG_BATTERY_MAX17042=y
 CONFIG_ESD_FS=y
 CONFIG_CHARGER_FAN54100=y
@@ -754,8 +855,6 @@ CONFIG_USB_DUMMY_HCD=m
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MODS_MODBUS_EXT=y
 CONFIG_FRAME_WARN=2048
-CONFIG_KEYS=y
-CONFIG_UID_CPUTIME=y
 # CONFIG_SECURE_TOUCH is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
 CONFIG_DUAL_ROLE_USB_INTF=y
@@ -763,8 +862,7 @@ CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_LEDS_QPNP_WLED=y
 CONFIG_QPNP_MOT_CONTEXT_HAPTIC=y
 CONFIG_DIAG_OVER_TTY=y
-# CONFIG_QPNP_SMBCHARGER is not set
-CONFIG_QPNP_SMBCHARGER_MMI=y
+# overridden later as 'not set' CONFIG_QPNP_SMBCHARGER_MMI=y
 CONFIG_FSUSB42_MUX=y
 CONFIG_USB_NET_MCS7830=y
 CONFIG_USB_PEGASUS=y
@@ -783,7 +881,6 @@ CONFIG_PGTABLE_MAPPING=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
-# CONFIG_IKCONFIG_PROC is not set
 CONFIG_HID_MOTOROLA_MODS=y
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_KPROBES=y
@@ -805,7 +902,6 @@ CONFIG_TICK_CPU_ACCOUNTING=y
 CONFIG_BRIDGE_NETFILTER=y
 CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_MATCH_RPFILTER=y
-# CONFIG_DM_UEVENT is not set
 # CONFIG_QPNP_TYPEC is not set
 # CONFIG_APSS_CORE_EA is not set
 # CONFIG_REGULATOR_MSM_GFX_LDO is not set
@@ -839,7 +935,7 @@ CONFIG_CEDRIC_DTB=y
 # Qualcomm Atheros Prima WLAN module
 #
 # CONFIG_PRIMA_WLAN is not set
-CONFIG_PRONTO_WLAN=y
+CONFIG_PRONTO_WLAN=m
 # CONFIG_PRIMA_WLAN_BTAMP is not set
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
@@ -852,3 +948,7 @@ CONFIG_WLAN_OFFLOAD_PACKETS=y
 
 # Fingerprint Gestures
 CONFIG_HOMEBUTTON=y
+
+# Cpusets
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
